Show the right version states for expanded items.

BUG: 267171
FIXED-IN: 4.11.3
REVIEW: 112980